# discovery_qualfml

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
automation/: cleanup_outputs.sh
discovery_qualfml/: __init__.py
discovery_qualfml/analysis/: process_mini_wonders.py
discovery_qualfml/app/: app.py  style.py
discovery_qualfml/app/assets/: style.css
discovery_qualfml/app/callbacks/: rq_callbacks.py  topic_modelling_callbacks.py  upload_callbacks.py
discovery_qualfml/app/layout/: rq_tab.py  topic_mapping.py  upload.py
discovery_qualfml/config/: logging.yaml
discovery_qualfml/demos/: research_questions_tab.ipynb
discovery_qualfml/docs/: deploying_the_app.md  top_down_approach.md
discovery_qualfml/utils/: dash_utils.py  file_processing.py  llm_question_answering.py  llm_summarize.py  topic_modelling.py  topic_modelling_llm_utils.py
discovery_qualfml/utils/prompts/: research_question_prompt.txt  topic_model_prompt.txt
docs/: app_logic.md  deploying_the_app.md  index.md  top_down_approach.md
