[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["discovery_qualfml"]

[project]
name = "discovery_qualfml"
version = "0.1.0"
description = "Code for qualfml app"
authors = [{ name = "Nesta" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = "==3.12.*"
dependencies = []

[project.urls]
repository = "https://github.com/nestauk/discovery_qualfml"
issues = "https://github.com/nestauk/discovery_qualfml/issues"

[dependency-groups]
dev = ["ipykernel", "jupytext", "ruff", "pre-commit"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear: Likely bugs
    "C",   # flake8-comprehensions and mccabe complexity
    "D",   # pydocstyle: Docstring conventions
    "E",   # pycodestyle: Errors (default)
    "F",   # pyflakes: Linter
    "I",   # isort
    "N",   # pep8-naming: Naming conventions
    "W",   # pycodestyle: Warnings (default)
]
ignore = [
    "D100", # Warns about missing module-level docstrings
    "S101", # Warns about assert being removed when compiled
]

[tool.ruff.lint.isort]
known-first-party = ["discovery_qualfml"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402", "D104"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
